package museo.models;

import java.util.Date;

public class OtroObjeto extends Obra {
    public OtroObjeto(String id,String autor,String periodo,double valor,Date fechaCreacion,Date fechaEntrada,String sala){
        super(id,autor,periodo,valor,fechaCreacion,fechaEntrada,sala);
    }
}
