package museo.usuarios;

public class EncargadoCatalogo extends Usuario {
    public EncargadoCatalogo(String n,String c){ super(n,c); }
}
