@startuml museo
abstract class Obra {
  - String id
  - String autor
  - String periodo
  - double valor
  - Date fechaCreacion
  - Date fechaEntrada
  - String sala
  - EstadoObra estado
  + getId(): String
}

class Cuadro
class Escultura
class OtroObjeto
Obra <|-- Cuadro
Obra <|-- Escultura
Obra <|-- OtroObjeto

class Restauracion {
  - String tipo
  - Date inicio
  - Date fin
}
Obra "1" o-- "0..*" Restauracion : tiene

class Cesion {
  - String museoDestino
  - Date inicio
  - Date fin
  - double importe
}
Obra "0..*" o-- "0..*" Cesion : cede

class CatalogoService {
  + agregarObra(o : Obra)
  + listar() : List<Obra>
  + listarPorSala(sala : String) : List<Obra>
  + valorTotal() : double
}

class RestauracionService {
  + iniciarRestauracion(o : Obra, tipo : String, inicio : Date)
  + finalizarRestauracion(o : Obra, fin : Date)
  + getRestauraciones(o : Obra) : List<Restauracion>
  + obrasParaRestaurar(todas : List<Obra>) : List<Obra>
}

class CesionService {
  + cederObra(o : Obra, c : Cesion)
  + siguienteCesionPendiente(o : Obra) : Cesion
}

class AuthService {
  + autenticar(user : String, pass : String) : String
}

abstract class Usuario
class EncargadoCatalogo
class RestauradorJefe
class Director
class Visitante
Usuario <|-- EncargadoCatalogo
Usuario <|-- RestauradorJefe
Usuario <|-- Director
Usuario <|-- Visitante

Director --> CatalogoService : consulta
EncargadoCatalogo --> CatalogoService : gestiona
RestauradorJefe --> RestauracionService : gestiona
Visitante --> CatalogoService : consulta por sala

' GUI
class MuseoApp {
  + main(args)
  - catalogo : CatalogoService
  - restauracion : RestauracionService
  - cesion : CesionService
  - auth : AuthService
}
MuseoApp --> CatalogoService
MuseoApp --> RestauracionService
MuseoApp --> CesionService

@enduml
